--- a/index.html
+++ b/index.html
@@ -22,37 +22,45 @@
 
   <body>
     <header class="header">
-      <nav>
-        <a href="./index.html" class="logo">
-          Web<span class="logo-text">Studio</span>
-        </a>
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a href="./index.html" class="logo header-logo">
+            Web<span class="logo-text">Studio</span>
+          </a>
 
-        <ul class="main-menu">
-          <li>
-            <a href="./index.html" class="menu-link">Studio</a>
-          </li>
-          <li>
-            <a href="" class="menu-link">Portfolio</a>
-          </li>
-          <li>
-            <a href="" class="menu-link">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com" class="contact-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="contact-link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+          <ul class="main-menu">
+            <li>
+              <a href="./index.html" class="menu-link">Studio</a>
+            </li>
+            <li>
+              <a href="" class="menu-link">Portfolio</a>
+            </li>
+            <li>
+              <a href="" class="menu-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-items">
+              <a
+                class="contacts-link"
+                href="mailto:info@devstudio.com"
+                class="contact-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-items">
+              <a
+                class="contacts-link"
+                href="tel:+110001111111"
+                class="contact-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
