--- a/index.html
+++ b/index.html
@@ -64,91 +64,97 @@
     </header>
 
     <main>
-      <section class="main-section">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="order-button">Order Service</button>
+      <section class="hero-section">
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="order-button">Order Service</button>
+        </div>
       </section>
       <section class="about-section">
-        <h2>About</h2>
-        <ul>
-          <li>
-            <h3 class="about-title">Strategy</h3>
-            <p class="about-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="about-title">Punctuality</h3>
-            <p class="about-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="about-title">Diligence</h3>
-            <p class="about-text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="about-title">Technologies</h3>
-            <p class="about-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">About</h2>
+          <ul class="about-list">
+            <li class="about-item">
+              <h3 class="about-title">Strategy</h3>
+              <p class="about-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="about-title">Punctuality</h3>
+              <p class="about-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="about-title">Diligence</h3>
+              <p class="about-text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="about-title">Technologies</h3>
+              <p class="about-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="our-team">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              src="./images/img-3.jpg"
-              width="264"
-              height="260"
-              alt="Mark Guerrero - Product Designer"
-            />
-            <h3 class="about-title">Mark Guerrero</h3>
-            <p class="about-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img-2.jpg"
-              width="264"
-              height="260"
-              alt="Tom Ford - Frontend Developer"
-            />
-            <h3 class="about-title">Tom Ford</h3>
-            <p class="about-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img-1.jpg"
-              width="264"
-              height="260"
-              alt="Camila Garcia - Marketing"
-            />
-            <h3 class="about-title">Camila Garcia</h3>
-            <p class="about-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/img.jpg"
-              width="264"
-              height="260"
-              alt="Daniel Wilson - UI Designer"
-            />
-            <h3 class="about-title">Daniel Wilson</h3>
-            <p class="about-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                src="./images/img-3.jpg"
+                width="264"
+                height="260"
+                alt="Mark Guerrero - Product Designer"
+              />
+              <h3 class="about-title">Mark Guerrero</h3>
+              <p class="about-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img-2.jpg"
+                width="264"
+                height="260"
+                alt="Tom Ford - Frontend Developer"
+              />
+              <h3 class="about-title">Tom Ford</h3>
+              <p class="about-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img-1.jpg"
+                width="264"
+                height="260"
+                alt="Camila Garcia - Marketing"
+              />
+              <h3 class="about-title">Camila Garcia</h3>
+              <p class="about-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/img.jpg"
+                width="264"
+                height="260"
+                alt="Daniel Wilson - UI Designer"
+              />
+              <h3 class="about-title">Daniel Wilson</h3>
+              <p class="about-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section>
+      <section class="portfolio">
         <h2 class="section-title">Our Portfolio</h2>
         <ul class="portfolio-list">
           <li class="portfolio-item">
