--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
     </header>
 
     <main>
-      <section class="hero-section">
-        <div class="container">
+      <section class="hero-section section">
+        <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="order-button">Order Service</button>
         </div>
       </section>
-      <section class="about-section">
+      <section class="about-section section">
         <div class="container">
           <h2 class="visually-hidden">About</h2>
           <ul class="about-list">
@@ -106,9 +106,9 @@
         </div>
       </section>
 
-      <section class="our-team">
+      <section class="our-team section">
         <div class="container">
-          <h2 class="section-title">Our Team</h2>
+          <h2 class="section-title team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
               <img
@@ -117,8 +117,10 @@
                 height="260"
                 alt="Mark Guerrero - Product Designer"
               />
-              <h3 class="about-title">Mark Guerrero</h3>
-              <p class="about-text">Product Designer</p>
+              <div class="team-item-subtitle">
+                <h3 class="our-team-title">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -127,8 +129,10 @@
                 height="260"
                 alt="Tom Ford - Frontend Developer"
               />
-              <h3 class="about-title">Tom Ford</h3>
-              <p class="about-text">Frontend Developer</p>
+              <div class="team-item-subtitle">
+                <h3 class="our-team-title">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -137,8 +141,10 @@
                 height="260"
                 alt="Camila Garcia - Marketing"
               />
-              <h3 class="about-title">Camila Garcia</h3>
-              <p class="about-text">Marketing</p>
+              <div class="team-item-subtitle">
+                <h3 class="our-team-title">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -147,77 +153,95 @@
                 height="260"
                 alt="Daniel Wilson - UI Designer"
               />
-              <h3 class="about-title">Daniel Wilson</h3>
-              <p class="about-text">UI Designer</p>
+              <div class="team-item-subtitle">
+                <h3 class="our-team-title">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
 
-      <section class="portfolio">
-        <h2 class="section-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
-            <img
-              src="./images/img-11.jpg"
-              width="360"
-              height="300"
-              alt="Banking App"
-            />
-            <h3 class="about-title">Banking App</h3>
-            <p class="about-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/img-10.jpg"
-              width="360"
-              height="300"
-              alt="Cashless Payment"
-            />
-            <h3 class="about-title">Cashless Payment</h3>
-            <p class="about-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/img-9.jpg"
-              width="360"
-              height="300"
-              alt="Meditation App"
-            />
-            <h3 class="about-title">Meditation App</h3>
-            <p class="about-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/img-8.jpg"
-              width="360"
-              height="300"
-              alt="Taxi Service"
-            />
-            <h3 class="about-title">Taxi Service</h3>
-            <p class="about-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/img-7.jpg"
-              width="360"
-              height="300"
-              alt="Screen Illustrations"
-            />
-            <h3 class="about-title">Screen Illustrations</h3>
-            <p class="about-text">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/img-6.jpg"
-              width="360"
-              height="300"
-              alt="Online Courses"
-            />
-            <h3 class="about-title">Online Courses</h3>
-            <p class="about-text">Marketing</p>
-          </li>
-        </ul>
+      <section class="portfolio section">
+        <div class="container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                src="./images/img-11.jpg"
+                width="360"
+                height="300"
+                alt="Banking App"
+              />
+              <div class="portfolio-caption">
+                <h3 class="about-title portfolio-title">Banking App</h3>
+                <p class="about-text portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/img-10.jpg"
+                width="360"
+                height="300"
+                alt="Cashless Payment"
+              />
+              <div class="portfolio-caption">
+                <h3 class="about-title portfolio-title">Cashless Payment</h3>
+                <p class="about-text portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/img-9.jpg"
+                width="360"
+                height="300"
+                alt="Meditation App"
+              />
+              <div class="portfolio-caption">
+                <h3 class="about-title portfolio-title">Meditation App</h3>
+                <p class="about-text portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/img-8.jpg"
+                width="360"
+                height="300"
+                alt="Taxi Service"
+              />
+              <div class="portfolio-caption">
+                <h3 class="about-title portfolio-title">Taxi Service</h3>
+                <p class="about-text portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/img-7.jpg"
+                width="360"
+                height="300"
+                alt="Screen Illustrations"
+              />
+              <div class="portfolio-caption">
+                <h3 class="about-title portfolio-title">
+                  Screen Illustrations
+                </h3>
+                <p class="about-text portfolio-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/img-6.jpg"
+                width="360"
+                height="300"
+                alt="Online Courses"
+              />
+              <div class="portfolio-caption">
+                <h3 class="about-title portfolio-title">Online Courses</h3>
+                <p class="about-text portfolio-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
