--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 alt="Banking App"
               />
               <div class="portfolio-caption">
-                <h3 class="about-title portfolio-title">Banking App</h3>
+                <h3 class="about-title portfolio-subtitle">Banking App</h3>
                 <p class="about-text portfolio-text">App</p>
               </div>
             </li>
@@ -186,7 +186,7 @@
                 alt="Cashless Payment"
               />
               <div class="portfolio-caption">
-                <h3 class="about-title portfolio-title">Cashless Payment</h3>
+                <h3 class="about-title portfolio-subtitle">Cashless Payment</h3>
                 <p class="about-text portfolio-text">Marketing</p>
               </div>
             </li>
@@ -198,7 +198,7 @@
                 alt="Meditation App"
               />
               <div class="portfolio-caption">
-                <h3 class="about-title portfolio-title">Meditation App</h3>
+                <h3 class="about-title portfolio-subtitle">Meditation App</h3>
                 <p class="about-text portfolio-text">App</p>
               </div>
             </li>
@@ -210,7 +210,7 @@
                 alt="Taxi Service"
               />
               <div class="portfolio-caption">
-                <h3 class="about-title portfolio-title">Taxi Service</h3>
+                <h3 class="about-title portfolio-subtitle">Taxi Service</h3>
                 <p class="about-text portfolio-text">Marketing</p>
               </div>
             </li>
@@ -222,7 +222,7 @@
                 alt="Screen Illustrations"
               />
               <div class="portfolio-caption">
-                <h3 class="about-title portfolio-title">
+                <h3 class="about-title portfolio-subtitle">
                   Screen Illustrations
                 </h3>
                 <p class="about-text portfolio-text">Design</p>
@@ -236,7 +236,7 @@
                 alt="Online Courses"
               />
               <div class="portfolio-caption">
-                <h3 class="about-title portfolio-title">Online Courses</h3>
+                <h3 class="about-title portfolio-subtitle">Online Courses</h3>
                 <p class="about-text portfolio-text">Marketing</p>
               </div>
             </li>
@@ -246,13 +246,15 @@
     </main>
 
     <footer class="page-footer">
-      <a href="./index.html" class="footer-logo">
-        Web<span class="footer-logo-text">Studio</span>
-      </a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="footer-logo">
+          Web<span class="footer-logo-text">Studio</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
