--- a/index.html
+++ b/index.html
@@ -43,18 +43,12 @@
         <address class="contacts">
           <ul class="contacts-list">
             <li class="contacts-items">
-              <a
-                class="contacts-link"
-                href="mailto:info@devstudio.com"
-                class="contact-link"
+              <a class="contacts-link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
             <li class="contacts-items">
-              <a
-                class="contacts-link"
-                href="tel:+110001111111"
-                class="contact-link"
+              <a class="contacts-link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
@@ -107,7 +101,7 @@
       </section>
 
       <section class="our-team section">
-        <div class="container">
+        <div class="container conteiner-team">
           <h2 class="section-title team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
