--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </section>
 
       <section class="our-team section">
-        <div class="container team-container">
+        <div class="container">
           <h2 class="section-title team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
